Change jumbotron's background image to ensure the legibility of the site's title and motto

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2em;
-  background-image: url("https://bit.ly/2UEUh4X");
+  background-image: url("https://bit.ly/2xDlE7y");
   border-radius: 0.3rem;
   height: 500px;
   background-size: cover;
@@ -11,7 +11,8 @@
 .title {
   text-align: center;
   color: white;
-  font-size: 300%;
+  font-size: 380%;
+  font-weight: 100;
   font-family: 'Baloo 2', cursive;
   margin-top:50px;
 }
