--- a/src/app/quotes/quotes.component.css
+++ b/src/app/quotes/quotes.component.css
@@ -1,5 +1,5 @@
 .parallax {
-  background-image: url("https://bit.ly/2X0cYTo");
+  background-image: url("https://bit.ly/2UQPLAq");
   height: 100%;
   background-attachment: fixed;
   background-position: center;
